--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,23 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Bíblia com Café
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+<ion-content [fullscreen]="true" class="ion-padding">
+  <div class="ion-text-center">
+    <h1><strong>Mídias Bíblia com Café</strong></h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLRxY3Jv8J66Hdd8stMCrBowC_ZKZ8cngn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
+  <div class="ion-text-center">
+    <ion-button color="secondary">
+      <b>|Spotify|</b>
+    </ion-button>
+    <ion-button>
+      <b>|Site|</b>
+    </ion-button>
+  </div>
+
 </ion-content>
