--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,6 @@
 #container {
   text-align: center;
-
+  background-color: #01012F;
   position: absolute;
   left: 0;
   right: 0;
@@ -16,8 +16,8 @@
 #container p {
   font-size: 16px;
   line-height: 22px;
-
-  color: #8c8c8c;
+  background-color: #01012F;
+  color: #ffffff;
 
   margin: 0;
 }
