--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,12 +12,16 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLRxY3Jv8J66Hdd8stMCrBowC_ZKZ8cngn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="ion-text-center">
-    <ion-button color="secondary">
+    <ion-button color="secondary" href="https://open.spotify.com/show/3KM2v9KxI4QYRoy3g8xI88" target="_blank" shape="round">
       <b>|Spotify|</b>
     </ion-button>
-    <ion-button>
+    <ion-button href="https://bibliacomcafe.com.br" target="_blank" shape="round">
       <b>|Site|</b>
     </ion-button>
   </div>
-
 </ion-content>
+<ion-footer>
+  <div class="ion-text-center">
+  <h5 ion-color-secondary>&copy;Bíblia com Café</h5>
+  </div>
+</ion-footer>
