--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -15,7 +15,7 @@
   --ion-color-secondary: #FE5316;
   --ion-color-secondary-rgb: 61, 194, 255;
   --ion-color-secondary-contrast: #01012F;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
+  --ion-color-secondary-contrast-rgb: 1, 1, 47;
   --ion-color-secondary-shade: #FE5316;
   --ion-color-secondary-tint: #FE5316;
 
@@ -25,7 +25,7 @@
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
   --ion-color-tertiary-shade: #FE5316;
-  --ion-color-tertiary-tint: #FE5316;
+  --ion-color-tertiary-tint: #FE3404;
 
   /** success **/
   --ion-color-success: #2dd36f;
@@ -83,19 +83,19 @@
    */
 
   body {
-    --ion-color-primary: #428cff;
+    --ion-color-primary: #01012F;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary-shade: #01012F;
+    --ion-color-primary-tint: #01012F;
 
-    --ion-color-secondary: #50c8ff;
+    --ion-color-secondary: #FE5316;
     --ion-color-secondary-rgb: 80,200,255;
     --ion-color-secondary-contrast: #ffffff;
     --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+    --ion-color-secondary-shade: #FE5316;
+    --ion-color-secondary-tint: #FE5316;
 
     --ion-color-tertiary: #6a64ff;
     --ion-color-tertiary-rgb: 106,100,255;
